--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-A simple Greasemonkey-script to add links to all sorts of events (class-, exam- and signup-dates) occuring within the Vienna University of Technology's online portal (TISS).
+A simple Greasemonkey-script to add links to all sorts of events (class-, exam- and signup-dates) 
+occuring within the Vienna University of Technology's online portal (TISS).
 
 
 Requires Greasemonkey (http://greasemonkey.mozdev.org/)
